# ARIA

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/edgar/: aig_2026-02-12.txt  allstate_2026-02-13.txt  hartford_2026-02-20.txt  markel_2026-02-26.txt  progressive_2026-03-02.txt  travelers_2026-02-12.txt
data/eval/: eval_report.json
frontend/app/: index.html  package-lock.json  package.json  vite.config.js
frontend/app/src/: App.jsx  index.css
frontend/app/src/components/dashboard/: AnalysisView.jsx  EntitiesCard.jsx  KpiCards.jsx  NarrativeCard.jsx  PipelineTrace.jsx  ShapFactors.jsx  SimilarCases.jsx  SubmissionEval.jsx  UploadView.jsx
frontend/app/src/components/eval/: EvalCaseTable.jsx  EvalMetricCards.jsx
frontend/app/src/components/landing/: Architecture.jsx  CallToAction.jsx  Features.jsx  Footer.jsx  Hero.jsx  Pipeline.jsx  Stats.jsx  TechStack.jsx
frontend/app/src/components/layout/: DashboardLayout.jsx  Navbar.jsx  Sidebar.jsx
frontend/app/src/components/shared/: Logo.jsx  RiskBadge.jsx
frontend/app/src/data/: demo-critical-risk.json  demo-high-risk.json  demo-low-risk.json  demo-moderate-risk.json
frontend/app/src/hooks/: useDemoData.js
frontend/app/src/lib/: api.js  constants.js  formatters.js
frontend/app/src/pages/: DashboardPage.jsx  EvalPage.jsx  LandingPage.jsx
frontend/mockup/: index.html  landing.html
models/xgboost/: claim_probability.json  claim_severity.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: aria.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: build_case_index.py  download_edgar.py  eval_pipeline.py  index_edgar.py  train_xgboost.py
services/ingestion/: Dockerfile  app.py  config.py  requirements.txt
services/ingestion/api/: dependencies.py  routes.py
services/ingestion/core/: constants.py  schemas.py
services/ingestion/services/: ner_extractor.py  pdf_sanitizer.py  spark_pipeline.py  text_extractor.py
services/ingestion/tests/: conftest.py  test_ner_extractor.py  test_pdf_sanitizer.py  test_routes.py  test_text_extractor.py
services/llm/: Dockerfile  app.py  config.py  requirements.txt
services/llm/api/: dependencies.py  routes.py
services/llm/core/: schemas.py
services/llm/services/: anthropic_provider.py  audit.py  hallucination.py  ollama_provider.py  orchestrator.py  provider.py  tools.py
services/llm/tests/: conftest.py  test_audit.py  test_hallucination.py  test_routes.py  test_tools.py
services/prediction/: Dockerfile  app.py  config.py  requirements.txt
services/prediction/api/: dependencies.py  routes.py
services/prediction/core/: constants.py  schemas.py
services/prediction/services/: feature_engineer.py  predictor.py
services/prediction/tests/: conftest.py  test_feature_engineer.py  test_predictor.py  test_routes.py
services/rag/: Dockerfile  app.py  config.py  requirements.txt
services/rag/api/: dependencies.py  routes.py
services/rag/core/: schemas.py
services/rag/services/: embedder.py  index_manager.py
services/rag/tests/: conftest.py  test_embedder.py  test_index_manager.py  test_routes.py
services/shared/: config.py  exceptions.py  health.py  logging.py  metrics.py  middleware.py  schemas.py
tests/integration/: conftest.py  helpers.py  test_pipeline.py
