[project]
name = "aria"
version = "0.1.0"
description = "Automated Risk Intelligence Assistant"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["services"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernize syntax)
    "SIM",  # flake8-simplify
    "B",    # flake8-bugbear (common pitfalls)
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return (return statement checks)
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["services"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["services", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
